--- a/consultplus-novo/package.json
+++ b/consultplus-novo/package.json
@@ -1,7 +1,7 @@
 {
   "name": "consultplus-121o",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
