Add start script to package.json for Railway

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "node src/index.js"
+  "dev": "node src/index.js",
+  "start": "node src/index.js"
+}
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -11,5 +13,4 @@
     "express": "^4.21.2",
     "pg": "^8.16.3"
   }
-  
 }
