Configura banco remoto Render

--- a/consultplus-novo/app.json
+++ b/consultplus-novo/app.json
@@ -45,6 +45,7 @@
     },
     "updates": {
       "url": "https://u.expo.dev/b8d6d3d0-4695-46aa-a04b-51262a6d79b3"
-    }
+    },
+    "owner": "mtrazo01"
   }
 }
